--- a/Posetrix/Resources/Styles.xaml
+++ b/Posetrix/Resources/Styles.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!--  Session window.  -->
+    <!--  Control buttons.  -->
     <Style
         x:Key="ControlButton"
         BasedOn="{StaticResource {x:Type Button}}"
@@ -11,6 +12,7 @@
         <Setter Property="FontSize" Value="24" />
         <Setter Property="Margin" Value="4,0" />
     </Style>
+    <!--  Image editing buttons.  -->
     <Style
         x:Key="ImageEditButton"
         BasedOn="{StaticResource {x:Type Button}}"
@@ -51,6 +53,7 @@
         <Setter Property="Height" Value="30" />
         <Setter Property="HorizontalAlignment" Value="Stretch" />
     </Style>
+    <!--  Form validation.  -->
     <Style
         x:Key="TextBoxValidation"
         BasedOn="{StaticResource {x:Type TextBox}}"
@@ -63,6 +66,7 @@
             </Trigger>
         </Style.Triggers>
     </Style>
+    <!--  Panels with content.  -->
     <Style x:Key="ContentPanel" TargetType="Border">
         <Setter Property="Padding" Value="12" />
         <Setter Property="Background" Value="{DynamicResource ExpanderHeaderBackground}" />
