--- a/Posetrix/Views/SettingsView.xaml
+++ b/Posetrix/Views/SettingsView.xaml
@@ -23,8 +23,6 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="12" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="12" />
-            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Background="Transparent">
             <Border
@@ -35,8 +33,8 @@
                 CornerRadius="{DynamicResource ControlCornerRadius}">
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
-                        <ColumnDefinition />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <TextBlock
                         Grid.Column="0"
@@ -46,7 +44,7 @@
                     <ComboBox
                         Name="ChangeTheme"
                         Grid.Column="1"
-                        MinWidth="180"
+                        MinWidth="220"
                         HorizontalAlignment="Right"
                         ItemsSource="{Binding Themes}"
                         SelectedItem="{Binding SelectedTheme}" />
@@ -60,24 +58,32 @@
                 BorderBrush="{DynamicResource ExpanderHeaderBorderBrush}"
                 BorderThickness="{StaticResource ExpanderBorderThemeThickness}"
                 CornerRadius="{DynamicResource ControlCornerRadius}">
-                <Grid>
+                <Grid ShowGridLines="False">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
-                        <ColumnDefinition />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
                     <TextBlock
                         Grid.Column="0"
                         VerticalAlignment="Center"
                         Text="Sounds" />
-                    <ComboBox
+                    <Button
                         Grid.Column="1"
-                        MinWidth="180"
+                        Width="36"
+                        Height="36"
+                        Margin="0,0,8,0"
+                        Padding="0"
                         HorizontalAlignment="Right"
-                        SelectedIndex="0">
-                        <ComboBoxItem Content="Sound 1" />
-                        <ComboBoxItem Content="Sound 2" />
-                        <ComboBoxItem Content="Off" />
-                    </ComboBox>
+                        Command="{Binding PlaySoundCommand}"
+                        Content="&#xE768;"
+                        FontFamily="{StaticResource SegoeUiIcons}" />
+                    <ComboBox
+                        Grid.Column="2"
+                        Width="220"
+                        HorizontalAlignment="Right"
+                        ItemsSource="{Binding Sounds}"
+                        SelectedItem="{Binding SelectedSound}" />
                 </Grid>
             </Border>
         </Grid>
@@ -90,8 +96,8 @@
                 CornerRadius="{DynamicResource ControlCornerRadius}">
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
-                        <ColumnDefinition />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <TextBlock
                         Grid.Column="0"
@@ -99,7 +105,7 @@
                         Text="Image quality" />
                     <ComboBox
                         Grid.Column="1"
-                        MinWidth="180"
+                        MinWidth="220"
                         HorizontalAlignment="Right"
                         SelectedIndex="0">
                         <ComboBoxItem Content="High" />
@@ -109,14 +115,7 @@
                 </Grid>
             </Border>
         </Grid>
-        <Button
-            Grid.Row="6"
-            Height="30"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            Command="{Binding SaveSettingsCommand}"
-            Content="Save settings" />
-        <StackPanel Grid.Row="8" VerticalAlignment="Center">
+        <StackPanel Grid.Row="6" VerticalAlignment="Center">
             <TextBlock
                 HorizontalAlignment="Center"
                 Style="{StaticResource BodyTextBlockStyle}"
