--- a/Posetrix/App.xaml
+++ b/Posetrix/App.xaml
@@ -6,7 +6,7 @@
         <ResourceDictionary>
             <FontFamily x:Key="SegoeUiIcons">pack://application:,,,/Assets/Fonts/#Segoe Fluent Icons</FontFamily>
             <FontFamily x:Key="SegoeUi">pack://application:,,,/Assets/Fonts/#Segoe UI</FontFamily>
-            <BitmapImage x:Key="AppIcon" UriSource="pack://application:,,,/Assets/Icons/avalonia-logo.ico" />
+            <BitmapImage x:Key="AppIcon" UriSource="pack://application:,,,/Assets/Icons/favicon.ico" />
             <ControlTemplate x:Key="EmptyErrorTemplate">
                 <AdornedElementPlaceholder />
             </ControlTemplate>
