--- a/Posetrix.Avalonia/Styles/AppDefaultStyles.axaml
+++ b/Posetrix.Avalonia/Styles/AppDefaultStyles.axaml
@@ -79,6 +79,14 @@
     <Style Selector="Button.accent-button:pointerover /template/ ContentPresenter">
         <Setter Property="Background" Value="{DynamicResource SystemAccentColorLight1}"></Setter>
         <Setter Property="Foreground" Value="{DynamicResource AccentButtonForeground}"></Setter>
-
+    </Style>
+    
+    <!-- Folder add window buttons. -->
+    <Style Selector="Button.folder-control">
+        <Setter Property="Width" Value="40"></Setter>
+        <Setter Property="Height" Value="40"></Setter>
+        <Setter Property="FontSize" Value="24"></Setter>
+        <Setter Property="HorizontalAlignment" Value="Center"></Setter>
+        <Setter Property="VerticalAlignment" Value="Center"></Setter>
     </Style>
 </Styles>
