--- a/Posetrix.Avalonia/Views/CustomIntervalView.axaml
+++ b/Posetrix.Avalonia/Views/CustomIntervalView.axaml
@@ -9,20 +9,9 @@
     <Design.DataContext>
         <vm:CustomIntervalViewModel />
     </Design.DataContext>
-    <Grid ColumnDefinitions="*,*,*">
+    <Grid>
         <TextBox
-            Grid.Column="0"
             Height="30"
-            Margin="0,0,10,0"
-            Text="{Binding SessionTimer.Hours}" />
-        <TextBox
-            Grid.Column="1"
-            Height="30"
-            Margin="0,0,10,0"
-            Text="{Binding SessionTimer.Minutes}" />
-        <TextBox
-            Grid.Column="2"
-            Height="30"
-            Text="{Binding SessionTimer.Seconds}" />
+            Text="{Binding Seconds}" />
     </Grid>
 </UserControl>
