--- a/Posetrix.Avalonia/Views/SettingsView.axaml
+++ b/Posetrix.Avalonia/Views/SettingsView.axaml
@@ -23,15 +23,13 @@
                     Name="ChangeTheme"
                     ItemsSource="{Binding Themes}"
                     SelectedItem="{Binding SelectedTheme}"
-                    DisplayMemberBinding=""
-                    SelectionChanged="ChangeTheme_OnSelectionChanged"
                     HorizontalAlignment="Right"
                     MinWidth="200"
                     VerticalAlignment="Center"
                     SelectedIndex="0">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Name}" />
+                            <!-- <TextBlock Text="{Binding Name}" /> -->
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
