--- a/Posetrix/Resources/DataTemplates.xaml
+++ b/Posetrix/Resources/DataTemplates.xaml
@@ -1,12 +1,38 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:core="clr-namespace:Posetrix.Core.ViewModels;assembly=Posetrix.Core"
-    xmlns:views="clr-namespace:Posetrix.Views">
-    <DataTemplate DataType="{x:Type core:CustomIntervalViewModel}">
+    xmlns:m="clr-namespace:Posetrix.Core.Models;assembly=Posetrix.Core"
+    xmlns:views="clr-namespace:Posetrix.Views"
+    xmlns:vm="clr-namespace:Posetrix.Core.ViewModels;assembly=Posetrix.Core">
+    <DataTemplate DataType="{x:Type vm:CustomIntervalViewModel}">
         <views:CustomIntervalView />
     </DataTemplate>
-    <DataTemplate DataType="{x:Type core:PredefinedIntervalsViewModel}">
+    <DataTemplate DataType="{x:Type vm:PredefinedIntervalsViewModel}">
         <views:PredefinedIntervalsView />
+    </DataTemplate>
+    <DataTemplate x:Key="ListViewTemplate" DataType="{x:Type m:ImageFolder}">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+
+            <StackPanel Grid.Column="0" Orientation="Vertical">
+                <TextBlock
+                    FontFamily="{DynamicResource SegoeUi}"
+                    FontWeight="Bold"
+                    Text="{Binding FolderName, Mode=OneWay}" />
+                <TextBlock
+                    FontFamily="{DynamicResource SegoeUi}"
+                    Foreground="{DynamicResource TextFillColorTertiaryBrush}"
+                    Text="{Binding FullFolderPath, Mode=OneWay}" />
+            </StackPanel>
+            <TextBlock
+                Grid.Column="1"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Center"
+                FontFamily="{DynamicResource SegoeUi}"
+                Text="{Binding ImageCounter, Mode=OneWay}" />
+        </Grid>
     </DataTemplate>
 </ResourceDictionary>
