--- a/Posetrix/Resources/Styles.xaml
+++ b/Posetrix/Resources/Styles.xaml
@@ -74,4 +74,25 @@
         <Setter Property="BorderThickness" Value="{DynamicResource ExpanderBorderThemeThickness}" />
         <Setter Property="CornerRadius" Value="{DynamicResource ControlCornerRadius}" />
     </Style>
+    <!--  Folders add window buttons.  -->
+    <Style
+        x:Key="FoldersAddRemoveButton"
+        BasedOn="{StaticResource {x:Type Button}}"
+        TargetType="Button">
+        <Setter Property="Width" Value="40" />
+        <Setter Property="Height" Value="40" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="FontFamily" Value="{DynamicResource SegoeUiIcons}" />
+        <Setter Property="FontSize" Value="24" />
+        <Setter Property="Padding" Value="0" />
+    </Style>
+    <!--  Textbox tooltips for buttons with SegoeUI icons font.  -->
+    <Style
+        x:Key="InfoToolTip"
+        BasedOn="{StaticResource {x:Type TextBlock}}"
+        TargetType="TextBlock">
+        <Setter Property="FontFamily" Value="{DynamicResource SegoeUi}" />
+        <Setter Property="FontSize" Value="14" />
+    </Style>
 </ResourceDictionary>
